# BSE-Simulation

./: Home.py  README.md  main.py  pyproject.toml
data/demo/: demo_0_avg_balance.csv  demo_0_blotters.csv  demo_0_tape.csv  demo_10_avg_balance.csv  demo_10_blotters.csv  demo_10_tape.csv  demo_11_avg_balance.csv  demo_11_blotters.csv  demo_11_tape.csv  demo_12_avg_balance.csv  demo_12_blotters.csv  demo_12_tape.csv  demo_13_avg_balance.csv  demo_13_blotters.csv  demo_13_tape.csv  demo_14_avg_balance.csv  demo_14_blotters.csv  demo_14_tape.csv  demo_15_avg_balance.csv  demo_15_blotters.csv  demo_15_tape.csv  demo_16_blotters.csv  (+56 more)
pages/: 1 - Demo.py  2 - Workshop.py  3 - Simulator.py
reference/: BSE.py  W5.Activity.INFT.BSE_demo.ipynb  W7.BSE-workshop.ipynb  smith_chart_0_avg_balance.csv  smith_chart_0_blotters.csv  smith_chart_0_tape.csv  smith_chart_1_avg_balance.csv  smith_chart_1_blotters.csv  smith_chart_1_tape.csv  smith_chart_2_avg_balance.csv  smith_chart_2_blotters.csv  smith_chart_2_tape.csv  smith_chart_3_avg_balance.csv  smith_chart_3_blotters.csv  smith_chart_3_tape.csv  smith_chart_4_avg_balance.csv  smith_chart_4_blotters.csv  smith_chart_4_tape.csv  smith_chart_5_avg_balance.csv  smith_chart_5_blotters.csv  smith_chart_5_tape.csv  smith_chart_6_avg_balance.csv  smith_chart_6_blotters.csv  smith_chart_6_tape.csv  smith_chart_7_avg_balance.csv  smith_chart_7_blotters.csv  smith_chart_7_tape.csv  smith_chart_8_avg_balance.csv  smith_chart_8_blotters.csv  smith_chart_8_tape.csv  smith_chart_9_avg_balance.csv  smith_chart_9_blotters.csv  smith_chart_9_tape.csv
